--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+        <link rel="stylesheet" href="./css/index_css.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <title>Hello World Simple App</title>
+        <script src="./js/index.js"></script>
+        
     </head>
     <body>
-        <div>Hello World!</div>
+        <div class="inputdiv">
+            <form id="form_binary" onsubmit="return false;" autocomplete="off">
+                <div class="inputdiv">
+                    <label class="labels" for="input_sb">Sign Bit</label>
+                    <br>
+                    <input id="input_sb" type="text" class="inputs" maxlength="1" placeholder="Sign bit" value="1">
+                </div>
+                <div class="inputdiv">
+                    <label class="labels" for="input_cf">Combination Field</label>
+                    <br>
+                    <input id="input_cf" type="text" name="inputs" class="inputs" placeholder="Combination Field" maxlength="5" value="11011">
+                </div>
+                <div class="inputdiv">
+                    <label class="labels" for="input_ec">Exponent Continuation</label>
+                    <br>
+                    <input id="input_ec" type="text" name="inputs" class="inputs" placeholder="Exponent Continuation" maxlength="6" value="100101">
+                </div>
+                <div class="inputdiv">
+                    <label class="labels" for="input_cc1">Coefficient Continuation 1</label>
+                    <br>
+                    <input id="input_cc1" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 1" maxlength="10" value="1001111101">
+                </div>
+                <div class="inputdiv">
+                    <label class="labels" for="input_cc2">Coefficient Continuation 2</label>
+                    <br>
+                    <input id="input_cc2" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 2" maxlength="10" value="1010100001">
+                </div>
+
+                <button id="submit_btn" type="submit">Calculate</button>
+
+                <p id="error_message" class="text-danger h5">Invalid input</p>
+            </form>
+        </div>
+        <div class="outputdiv" style="margin-top: 25px;">
+            <label class="labels" for="output" style="font-weight: bold;">Decimal 32 Floating Point</label>
+            <p id="output">0</p>
+        </div>
     </body>
 </html>
