--- a/public/css/index_css.css
+++ b/public/css/index_css.css
@@ -11,6 +11,24 @@ label{
 .inputdiv{
     min-width: 80%;
     min-height: 80%;
+    background-color:floralwhite;
+    margin-left: 30px;
+    margin-right: 30px;
+
+}
+.calculator_cont{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    
+}
+
+.header_title{
+    margin-top: 50px;
+    font-size: 25px;
+    font-style:italic;
+    font-weight: bold;
 }
 
 .inputs{
@@ -31,6 +49,7 @@ label{
 #submit_btn{
     margin-top: 10px;
     font-size: 24px;
+    background-color: grey;
 }
 
 #output{
