--- a/public/css/index_css.css
+++ b/public/css/index_css.css
@@ -46,7 +46,7 @@ label{
     margin-bottom: 10px;
 }
 
-#submit_btn{
+#submit_btn_bin{
     margin-top: 10px;
     font-size: 24px;
     background-color: grey;
