--- a/public/css/index_css.css
+++ b/public/css/index_css.css
@@ -15,6 +15,7 @@ label{
     margin-right: 30px;
 
 }
+
 .calculator_cont{
     margin-top: 10px;
     margin-bottom: 10px;
@@ -59,4 +60,24 @@ label{
     
 }
 
-/* INPUT FIELDS */
+.nav_main{
+    align-items: center;
+    align-content: center;
+    color: white;
+    margin-top: 50px;
+    max-width: 100vw;
+}
+
+.nav_main a{
+    color: white;
+    margin-left: 10px;
+}
+
+.nav-link {
+    color: #4e4e4e;   
+}
+
+.nav-link:hover {
+    transition: color 0.2s;
+    color:#DCA73A;
+}
