--- a/public/css/index_css.css
+++ b/public/css/index_css.css
@@ -60,15 +60,16 @@ label{
     
 }
 
-.nav_main{
+.nav{
     align-items: center;
     align-content: center;
-    color: white;
+    color: rgb(34, 146, 146);
+    background-color: rgb(0, 0, 0);
     margin-top: 50px;
     max-width: 100vw;
 }
 
-.nav_main a{
+.nav a{
     color: white;
     margin-left: 10px;
 }
