added hex input computation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
                         <div class="inputdiv">
                             <label class="labels" for="input_hex">Hex Digit</label>
                             <br>
-                            <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex bit" value="0">
+                            <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex bit" value="EE59F6A1">
                         </div>
     
                         <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
