--- a/public/css/index_css.css
+++ b/public/css/index_css.css
@@ -63,8 +63,8 @@ label{
 .nav{
     align-items: center;
     align-content: center;
-    color: rgb(34, 146, 146);
-    background-color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
+    background-color: #009688;
     margin-top: 50px;
     max-width: 100vw;
 }
