--- a/public/css/index_css.css
+++ b/public/css/index_css.css
@@ -5,7 +5,7 @@ html{
 label{
     font-size: 24px;
     font-weight: 500;
-    color:#4e4e4e;
+    color:#363636;
 }
 
 .inputdiv{
@@ -15,14 +15,27 @@ label{
     margin-right: 30px;
 
 }
+.outputdiv{
+    min-width: 40%;
+    min-height: 40%;
+    margin-left: 30px;
+    margin-right: 30px;
+}
 
-.calculator_cont{
+.container{
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
     
-    
+}
+.tab-content{
+    background-color: rgb(218, 218, 218);
+}
+
+.btn{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .header_title{
@@ -53,6 +66,10 @@ label{
     margin: auto;
 }
 
+.button_wrapper{
+    text-align: center;
+}
+
 #output{
     font-size: 24px;
     margin-top: 0;
@@ -64,7 +81,7 @@ label{
     align-items: center;
     align-content: center;
     color: rgb(0, 0, 0);
-    background-color: #009688;
+    background-color: #02c2af;
     margin-top: 50px;
     max-width: 100vw;
 }
