--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,17 +10,104 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
          <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!--Import materialize.css-->
-        <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
 
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="./js/FileSaver.js"></script>
         <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script> 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
     </head>
     <body>
-        <div class="header_title">Decimal-32 Floating Point Translator </div>
-        <div class="container pt-5 pb-4">
+        <div class="header">
+            Decimal-32 Floating Point Translator
+        </div>
+
+        <div class="container_collapse">
+            <ul class="collapsible">
+                <li>
+                  <div class="collapsible-header"><i class="material-icons">format_list_bulleted</i>32-Bit Binary Input</div>
+                  <div class="collapsible-body"><span>
+                            <form id="form_binary" class="input_form" onsubmit="return false;" autocomplete="off">
+                                <div class="inputdiv">
+                                    <label class="labels" for="input_sb">Sign Bit</label>
+                                    <br>
+                                    <input id="input_sb" type="text" class="inputs" maxlength="1" placeholder="Sign bit" value="0">
+                                </div>
+                                <div class="inputdiv">
+                                    <label class="labels" for="input_cf">Combination Field</label>
+                                    <br>
+                                    <input id="input_cf" type="text" name="inputs" class="inputs" placeholder="Combination Field" maxlength="5" value="01001">
+                                </div>
+                                <div class="inputdiv">
+                                    <label class="labels" for="input_ec">Exponent Continuation</label>
+                                    <br>
+                                    <input id="input_ec" type="text" name="inputs" class="inputs" placeholder="Exponent Continuation" maxlength="6" value="110100">
+                                </div>
+                                <div class="inputdiv">
+                                    <label class="labels" for="input_cc1">Coefficient Continuation 1</label>
+                                    <br>
+                                    <input id="input_cc1" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 1" maxlength="10" value="0001101011">
+                                </div>
+                                <div class="inputdiv">
+                                    <label class="labels" for="input_cc2">Coefficient Continuation 2</label>
+                                    <br>
+                                    <input id="input_cc2" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 2" maxlength="10" value="1011000110">
+                                </div>
+                
+                                <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
+                                <p id="error_message_binary" class="text_error">Invalid input</p>
+                                <div class="button_wrapper">
+                                    <button class="waves-effect waves-light btn" id="submit_btn_bin" type="submit" name="action">TRANSLATE
+                                    <i class="material-icons right">send</i>
+                                    </button>
+                                </div>
+                            </form>
+                            <div class="button_wrapper"><button class="waves-effect waves-light btn" id="download_btn_bin"><i class="material-icons right">file_download</i>DOWNLOAD</button></div>
+                    </span></div>
+                    </li>
+                    <li>
+                    <div class="collapsible-header"><i class="material-icons">format_list_bulleted</i>8-Digit Hex Input</div>
+                    <div class="collapsible-body"><span>
+                        <form id="form_hex" onsubmit="return false;" autocomplete="off">
+                            <div class="inputdiv">
+                                <label class="labels" for="input_hex">Hex Digit</label>
+                                <br>
+                                <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex bit" value="EE59F6A1">
+                            </div>
+    
+                            <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
+                            <p id="error_message_hex" class="text_error">Invalid input</p>
+                            <div class="button_wrapper"><button class="btn waves-effect waves-light" id="submit_btn_hex" type="submit" name="action">TRANSLATE
+                                <i class="material-icons right">send</i>
+                            </button></div>
+                        </form>
+                        <div class="button_wrapper"><button class="waves-effect waves-light btn" id="download_btn_hex"><i class="material-icons right">file_download</i>DOWNLOAD</button></div>
+                  </span></div>
+                </li>
+              </ul>
+    
+            <!-- <div class="header_title">Decimal-32 Floating Point Translator </div> -->
+            
+        </div>
+
+
+    <div class="ans_card row">
+        <div class="col s12 m6">
+        <div class="card teal lighten-2">
+            <div class="card-content white-text">
+                <div class="outputdiv" style="margin:0;">
+                    <p class="ans_label">Answer:</p>
+                    <p id="output">0</p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+        <!-- 
+<div class="container pt-5 pb-4">
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                     <a class="nav-item nav-link active" id="bit-tab" data-toggle="tab" onclick="bit32();" role="tab" aria-controls="bit-div" aria-selected="true">32-Bit Binary Input</a>
@@ -29,70 +116,22 @@
             </nav>
             <div class="tab-content py-4" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="bit-div" role="tabpanel" aria-labelledby="bit-tab">
-                    <form id="form_binary" onsubmit="return false;" autocomplete="off">
-                        <div class="inputdiv">
-                            <label class="labels" for="input_sb">Sign Bit</label>
-                            <br>
-                            <input id="input_sb" type="text" class="inputs" maxlength="1" placeholder="Sign bit" value="0">
-                        </div>
-                        <div class="inputdiv">
-                            <label class="labels" for="input_cf">Combination Field</label>
-                            <br>
-                            <input id="input_cf" type="text" name="inputs" class="inputs" placeholder="Combination Field" maxlength="5" value="01001">
-                        </div>
-                        <div class="inputdiv">
-                            <label class="labels" for="input_ec">Exponent Continuation</label>
-                            <br>
-                            <input id="input_ec" type="text" name="inputs" class="inputs" placeholder="Exponent Continuation" maxlength="6" value="110100">
-                        </div>
-                        <div class="inputdiv">
-                            <label class="labels" for="input_cc1">Coefficient Continuation 1</label>
-                            <br>
-                            <input id="input_cc1" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 1" maxlength="10" value="0001101011">
-                        </div>
-                        <div class="inputdiv">
-                            <label class="labels" for="input_cc2">Coefficient Continuation 2</label>
-                            <br>
-                            <input id="input_cc2" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 2" maxlength="10" value="1011000110">
-                        </div>
-        
-                        <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
-                        <div class="button_wrapper"><button class="btn waves-effect waves-light" id="submit_btn_bin" type="submit" name="action">Submit
-                            <i class="material-icons right">send</i>
-                        </button></div>
-                        <p id="error_message_binary" class="text-danger h5">Invalid input</p>
-                    </form>
-                    <div class="button_wrapper"><button class="waves-effect waves-light btn" id="download_btn_bin"><i class="material-icons right">cloud</i>download</button></div>
+                    
                 
                 </div>
     
                 <div class="tab-pane fade" id="hex-div" role="tabpanel" aria-labelledby="hex-tab">
                     
-                    <form id="form_hex" onsubmit="return false;" autocomplete="off">
-                        <div class="inputdiv">
-                            <label class="labels" for="input_hex">Hex Digit</label>
-                            <br>
-                            <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex bit" value="EE59F6A1">
-                        </div>
-    
-                        <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
-                        <div class="button_wrapper"><button class="btn waves-effect waves-light" id="submit_btn_hex" type="submit" name="action">Submit
-                            <i class="material-icons right">send</i>
-                          </button> </div>
-                        <p id="error_message_hex" class="text-danger h5">Invalid input</p>
-                    </form>
-                    <div class="button_wrapper"><button class="waves-effect waves-light btn" id="download_btn_hex"><i class="material-icons right">cloud</i>download</button></div>
+                    
                 </div>
             </div>
             
         </div>
+
+         -->
         
-        <div class="container">
-            <div class="outputdiv">
-                <label class="labels" for="output" style="font-weight: bold;">Decimal 32 Floating Point</label>
-                <p id="output">0</p>
-            </div>
-        </div>
+        
+            
         
         <script type="text/javascript">
             let download_btn_bin = document.getElementById('download_btn_bin');
