--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Hello World Simple App</title>
+        <title>Decimal-32 Floating Point Translator</title>
         <script src="./js/index.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
          <!--Import Google Icon Font-->
@@ -33,27 +33,27 @@
                                 <div class="inputdiv">
                                     <label class="labels" for="input_sb">Sign Bit</label>
                                     <br>
-                                    <input id="input_sb" type="text" class="inputs" maxlength="1" placeholder="Sign bit" value="0">
+                                    <input id="input_sb" type="text" class="inputs" maxlength="1" placeholder="Sign bit">
                                 </div>
                                 <div class="inputdiv">
                                     <label class="labels" for="input_cf">Combination Field</label>
                                     <br>
-                                    <input id="input_cf" type="text" name="inputs" class="inputs" placeholder="Combination Field" maxlength="5" value="01001">
+                                    <input id="input_cf" type="text" name="inputs" class="inputs" placeholder="Combination Field" maxlength="5">
                                 </div>
                                 <div class="inputdiv">
                                     <label class="labels" for="input_ec">Exponent Continuation</label>
                                     <br>
-                                    <input id="input_ec" type="text" name="inputs" class="inputs" placeholder="Exponent Continuation" maxlength="6" value="110100">
+                                    <input id="input_ec" type="text" name="inputs" class="inputs" placeholder="Exponent Continuation" maxlength="6">
                                 </div>
                                 <div class="inputdiv">
                                     <label class="labels" for="input_cc1">Coefficient Continuation 1</label>
                                     <br>
-                                    <input id="input_cc1" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 1" maxlength="10" value="0001101011">
+                                    <input id="input_cc1" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 1" maxlength="10">
                                 </div>
                                 <div class="inputdiv">
                                     <label class="labels" for="input_cc2">Coefficient Continuation 2</label>
                                     <br>
-                                    <input id="input_cc2" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 2" maxlength="10" value="1011000110">
+                                    <input id="input_cc2" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 2" maxlength="10">
                                 </div>
                 
                                 <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
@@ -74,7 +74,7 @@
                             <div class="inputdiv">
                                 <label class="labels" for="input_hex">Hex Digit</label>
                                 <br>
-                                <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex bit" value="EE59F6A1">
+                                <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex bit">
                             </div>
     
                             <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
