updated index ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,12 +59,12 @@
                                 <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
                                 <p id="error_message_binary" class="text_error">Invalid input</p>
                                 <div class="button_wrapper">
-                                    <button class="waves-effect waves-light btn" id="submit_btn_bin" type="submit" name="action">TRANSLATE
+                                    <button class="btn" id="submit_btn_bin" type="submit" name="action">TRANSLATE
                                     <i class="material-icons right">send</i>
                                     </button>
                                 </div>
                             </form>
-                            <div class="button_wrapper"><button class="waves-effect waves-light btn" id="download_btn_bin"><i class="material-icons right">file_download</i>DOWNLOAD</button></div>
+                            <div class="button_wrapper"><button class="btn" id="download_btn_bin"><i class="material-icons right">file_download</i>DOWNLOAD</button></div>
                     </span></div>
                     </li>
                     <li>
@@ -79,11 +79,11 @@
     
                             <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
                             <p id="error_message_hex" class="text_error">Invalid input</p>
-                            <div class="button_wrapper"><button class="btn waves-effect waves-light" id="submit_btn_hex" type="submit" name="action">TRANSLATE
+                            <div class="button_wrapper"><button class="btn" id="submit_btn_hex" type="submit" name="action">TRANSLATE
                                 <i class="material-icons right">send</i>
                             </button></div>
                         </form>
-                        <div class="button_wrapper"><button class="waves-effect waves-light btn" id="download_btn_hex"><i class="material-icons right">file_download</i>DOWNLOAD</button></div>
+                        <div class="button_wrapper"><button class="btn" id="download_btn_hex"><i class="material-icons right">file_download</i>DOWNLOAD</button></div>
                   </span></div>
                 </li>
               </ul>
