--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,8 +55,6 @@
                                     <br>
                                     <input id="input_cc2" type="text" name="inputs" class="inputs" placeholder="Coefficient Continuation 2" maxlength="10">
                                 </div>
-                
-                                <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
                                 <p id="error_message_binary" class="text_error">Invalid input</p>
                                 <div class="button_wrapper">
                                     <button class="btn" id="submit_btn_bin" type="submit" name="action">TRANSLATE
@@ -74,10 +72,8 @@
                             <div class="inputdiv">
                                 <label class="labels" for="input_hex">Hex Digit</label>
                                 <br>
-                                <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex bit">
+                                <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex bit" value="2741AEC6">
                             </div>
-    
-                            <!-- <button class="btn waves-effect waves-light" id="submit_btn" type="submit">Calculate<i class="material-icons right">send</i></button> -->
                             <p id="error_message_hex" class="text_error">Invalid input</p>
                             <div class="button_wrapper"><button class="btn" id="submit_btn_hex" type="submit" name="action">TRANSLATE
                                 <i class="material-icons right">send</i>
@@ -87,12 +83,7 @@
                   </span></div>
                 </li>
               </ul>
-    
-            <!-- <div class="header_title">Decimal-32 Floating Point Translator </div> -->
-            
         </div>
-
-
     <div class="ans_card row">
         <div class="col s12 m6">
         <div class="card teal lighten-2">
@@ -103,7 +94,7 @@
                 </div>
                 <div class="output_select" >
                     <p class="ans_label">Format</p>
-                    <select class="browser-default" >
+                    <select id="output_format" class="browser-default" >
                       <option value="1">Fixed Decimal</option>
                       <option value="2">Floating Point</option>
                     </select>
@@ -114,34 +105,6 @@
         </div>
         </div>
     </div>
-
-        <!-- 
-<div class="container pt-5 pb-4">
-            <nav>
-                <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                    <a class="nav-item nav-link active" id="bit-tab" data-toggle="tab" onclick="bit32();" role="tab" aria-controls="bit-div" aria-selected="true">32-Bit Binary Input</a>
-                    <a class="nav-item nav-link" id="hex-tab" data-toggle="tab" onclick="hex8()" role="tab" aria-controls="hex-div" aria-selected="false">8-Digit Hex Input</a>
-                </div>
-            </nav>
-            <div class="tab-content py-4" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="bit-div" role="tabpanel" aria-labelledby="bit-tab">
-                    
-                
-                </div>
-    
-                <div class="tab-pane fade" id="hex-div" role="tabpanel" aria-labelledby="hex-tab">
-                    
-                    
-                </div>
-            </div>
-            
-        </div>
-
-         -->
-        
-        
-            
-        
         <script type="text/javascript">
             let download_btn_bin = document.getElementById('download_btn_bin');
             download_btn_bin.onclick = function(){
@@ -152,7 +115,7 @@
                 let expocont = $('#input_ec').val();
                 let coefcont1 = $('#input_cc1').val();
                 let coefcont2 = $('#input_cc2').val();
-                let output = $('#output').val();
+                let output = $('#output').text();
                 var blob = new Blob(["32-bit binary input to Decimal 32 floating point", "\n\n", "Sign bit: " + signbit, "\n", "Combination Field: " + combifield
             , "\n", "Exponeent Continuation: " + expocont, "\n", "Coefficient Continuation 1: " + coefcont1, "\n", "Coefficient Continuation 2: " + coefcont2,
             "\n\n", "Decimal 32 Floating Point: " + output], {type: 'text/plain;charset=utf-8'});
@@ -162,11 +125,55 @@
             let download_btn_hex = document.getElementById('download_btn_hex');
             download_btn_hex.onclick = function(){
                 let hexdigit = $('#input_hex').val();
-                let output = $('#output').val();
+                let output = $('#output').text();
                 var blob = new Blob(["8-digit hex input to Decimal 32 floating point", "\n\n", "Hex Digit: " + hexdigit, "\n\n", "Decimal 32 Floating Point: " + output],
                 {type: 'text/plain;charset=utf-8'});
                 saveAs(blob, "decimal-32-floating-point-translator-8-hex-input.txt");
             }
+
+            let output_format = $('#output_format');
+            output_format.on("change", function(){
+                if(output_format.val() == "2"){
+                    getFloatingPoint();
+                }
+                else{
+                    getFixedPoint();
+                }
+                
+            });
+
+            function getFixedPoint(){
+                $('#output').text($('#output').val());
+            }
+
+            function getFloatingPoint(){
+                let booltemp = true;
+                let outtemp = $('#output').text();
+                outtemp = parseInt(outtemp.toString().split(' x ')[0].replace(/,/g, ''));
+                if(outtemp < 0){
+                    booltemp = false;
+                    Math.abs(outtemp);
+                }
+                let exptemp = $('#output').text();
+                exptemp = exptemp.toString().split(' ^ ')[1];
+                let i;
+                let exptemp2 = outtemp.toString().length - 1;
+                for(i = 0; i < outtemp.toString().length; i++){
+                    outtemp = outtemp / 10;
+                }
+                outtemp = outtemp.toString().split('e-')[0];
+                outtemp = parseFloat(outtemp);
+                exptemp = parseInt(exptemp) + exptemp2;
+                let output = $('#output');
+                if(booltemp){
+                    output.text(outtemp + " x 10 ^ " + exptemp);
+                }
+                else{
+                    output.text(outtemp + " x 10 ^ " + (exptemp - 1));
+                }
+                
+            }
+
             function bit32(){
                 let bittab = $('#bit-tab');
                 let hextab = $('#hex-tab');
