Fixed final value error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
                             <div class="inputdiv">
                                 <label class="labels" for="input_hex">Hex Digit</label>
                                 <br>
-                                <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex Digit">
+                                <input id="input_hex" type="text" class="inputs" maxlength="8" placeholder="Hex Digit" value="04000000">
                             </div>
                             <p id="error_message_hex" class="text_error">Invalid input</p>
                             <div class="button_wrapper"><button class="btn" id="submit_btn_hex" type="submit" name="action">TRANSLATE
